--- a/Optimzation_Algorithms.ipynb
+++ b/Optimzation_Algorithms.ipynb
@@ -1,16 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/el-moudni-hicham/Optimizatiom-Algorithms/blob/main/Optimzation_Algorithms.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
@@ -452,7 +442,7 @@
         "id": "pcRzV7Wvim9N",
         "outputId": "1cc899ca-e72e-462f-b394-6f8a91fa7911"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -526,7 +516,7 @@
       "metadata": {
         "id": "jBbK2ocdi1yR"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -576,7 +566,7 @@
         "id": "2NIm-pv6i_kA",
         "outputId": "02aa4330-6fa4-4a59-aa54-28a13bf4c20f"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -603,8 +593,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyND+iVx2S+L/1iG2POp1rOM",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyND+iVx2S+L/1iG2POp1rOM"
     },
     "kernelspec": {
       "display_name": "Python 3",
